--- a/Learning_Platform/User_management/templates/User_management/admin_home.html
+++ b/Learning_Platform/User_management/templates/User_management/admin_home.html
@@ -1,12 +1,12 @@
-<!-- user_management/templates/user_management/user_home.html -->
+<!-- user_management/templates/user_management/admin_home.html -->
 
 <!DOCTYPE html>
 <html>
 <head>
-    <title>User Home</title>
+    <title>Admin Home</title>
 </head>
 <body>
-    <h1>User Home</h1>
+    <h1>Admin Home</h1>
     <p>Welcome, {{ user.username }}</p>
     <a href="{% url 'login' %}">Logout</a>
 </body>
